--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="msapplication-navbutton-color" content="#000000">
     <!-- iOS Safari -->
     <meta name="apple-mobile-web-app-status-bar-style" content="#000000">
-    <link rel="stylesheet" href="styleX.css">
+    <link rel="stylesheet" href="/style/index.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nova+Cut&family=Nova+Flat&display=swap" rel="stylesheet">
     <script src="js/tempo.js"></script>
