keep going on reset fixed

--- a/index.html
+++ b/index.html
@@ -22,12 +22,9 @@
 <body onkeypress="tapped(), keyCounter()">
     <button class="td_button mainButton" onmousedown="tapped()">
       <div class="onBoarding" id="onBoarding">
-        <!-- <h2 class="bmp" id="tempoBMP"></h2>  -->
         <h2 class='onBoardingMessage slideup' id='onBoardingStart'>Start pressing any key to get beats per minute</h2>
       </div>
     </button>
-
-    <!-- <h2 class='onBoardingMessage slideup'>Start pressing any key to get beats per minute</h2> -->
 
     <main id="main">
 
@@ -37,7 +34,7 @@
     <footer>
         <div class="settings">
             <span class="appBtn" id="audioIcon" onclick="audioControl()">
-              <img src="/icons/speaker.svg" alt="audio option" class="audioIcon" id="audioIcon" />
+              <img src="/icons/speaker.svg" alt="Tap Tempo audio option"  id="audioIcon" />
           </span>
             <span class="appBtn" id="resetbutton" onclick="resetX()">
           <svg width="41" height="40" viewBox="0 0 41 40" fill="none" xmlns="http://www.w3.org/2000/svg">
