mute icon fixed

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Taptempo | Clean and simple BPM tool </title>
     <meta name="description" content="Interactive tap-tempo tool to help you find the right tempo. Tap the big red button or hit any key to get started." />
     <!-- Chrome, Firefox OS and Opera -->
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#F28537">
     <!-- Windows Phone -->
-    <meta name="msapplication-navbutton-color" content="#000000">
+    <meta name="msapplication-navbutton-color" content="#F28537">
     <!-- iOS Safari -->
-    <meta name="apple-mobile-web-app-status-bar-style" content="#000000">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#F28537">
     <link rel="stylesheet" href="/style/index.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nova+Cut&family=Nova+Flat&display=swap" rel="stylesheet">
@@ -33,10 +33,10 @@
     <audio id="audio" src="sound/eastboundHat.wav"></audio>
     <footer>
         <div class="settings">
-            <span class="appBtn" id="audioIcon" onclick="audioControl()">
+            <span class="appBtn" onclick="audioControl()">
               <img src="/icons/speaker.svg" alt="Tap Tempo audio option"  id="audioIcon" />
           </span>
-            <span class="appBtn" id="resetbutton" onclick="resetX()">
+            <span class="appBtn" id="resetbutton" onclick="reset()">
           <svg width="41" height="40" viewBox="0 0 41 40" fill="none" xmlns="http://www.w3.org/2000/svg">
             <path d="M6.13405 13.3333C8.65135 7.9182 14.1389 4.16666 20.5 4.16666C27.9107 4.16666 34.1352 9.25909 35.8591 16.1372C36.0269 16.8069 36.7058 17.2137 37.3755 17.0458C38.0451 16.878 38.4519 16.1991 38.2841 15.5294C36.2881 7.56564 29.0845 1.66666 20.5 1.66666C13.7459 1.66666 7.84709 5.31861 4.66663 10.7526V7.91666C4.66663 7.2263 4.10698 6.66666 3.41663 6.66666C2.72627 6.66666 2.16663 7.2263 2.16663 7.91666V14.1667C2.16663 15.0871 2.91282 15.8333 3.83329 15.8333H10.0833C10.7736 15.8333 11.3333 15.2737 11.3333 14.5833C11.3333 13.893 10.7736 13.3333 10.0833 13.3333H6.13405Z" fill="white"/>
             <path d="M5.14089 23.8628C4.97306 23.1931 4.29414 22.7863 3.6245 22.9542C2.95486 23.122 2.54806 23.8009 2.7159 24.4705C4.71191 32.4343 11.9155 38.3333 20.5 38.3333C27.254 38.3333 33.1528 34.6814 36.3333 29.2474V32.0833C36.3333 32.7737 36.8929 33.3333 37.5833 33.3333C38.2736 33.3333 38.8333 32.7737 38.8333 32.0833V25.8333C38.8333 24.9128 38.0871 24.1667 37.1666 24.1667H30.9166C30.2263 24.1667 29.6666 24.7263 29.6666 25.4167C29.6666 26.107 30.2263 26.6667 30.9166 26.6667H34.8659C32.3486 32.0818 26.861 35.8333 20.5 35.8333C13.0893 35.8333 6.8648 30.7409 5.14089 23.8628Z" fill="white"/>
